--- a/public/css/docs-style.css
+++ b/public/css/docs-style.css
@@ -131,3 +131,10 @@ h4 {
     border-radius: 3px;
     font-family: monospace;
 }
+
+.back {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 20px;
+}
