--- a/public/css/normalize.css
+++ b/public/css/normalize.css
@@ -15,7 +15,7 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 400px;
+    min-width: 400px;
     padding: 40px;
     transform: translate(-50%, -50%);
     background: #242026;
@@ -53,7 +53,7 @@ h3 {
     font-weight: bold;
 }
 
-.box .user-box input {
+.box .input-box input {
     position: relative;
     width: 100%;
     padding: 10px 0;
@@ -66,7 +66,7 @@ h3 {
     background: transparent;
 }
 
-.box .user-box label {
+.box .input-box label {
     position: relative;
     left: 0;
     top: -60px;
@@ -77,11 +77,61 @@ h3 {
     transition: .5s;
 }
 
-.box .user-box input:focus~label, .box .user-box input:valid~label{
+.box .input-box input:focus~label, .box .input-box input:valid~label{
     top: -85px;
     left: 0;
     color: #8F7CEC;
     font-size: 12px;
+}
+
+.box .input-box select {
+    position: relative;
+    width: 100%;
+    padding: 10px 0;
+    font-size: 16px;
+    color: #fff;
+    margin-bottom: 30px;
+    border: none;
+    border-bottom: 1px solid #fff;
+    outline: none;
+    background: transparent;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    cursor: pointer;
+}
+
+.box .checkbox {
+    display: flex;
+    color: #8F7CEC;
+    font-size: 12px;
+    margin-bottom: 60px;
+}
+
+.box .textarea-box {
+    display: flex;
+    flex-direction: column;
+    color: #8F7CEC;
+    font-size: 12px;
+    min-width: 450px;
+    margin-bottom: 60px;
+}
+
+.box .input-box select:focus + label,
+.box .input-box select:not([value=""]) + label,
+.box .input-box select:not(:placeholder-shown) + label {
+  top: -85px;
+  left: 0;
+  color: #8F7CEC;
+  font-size: 12px;
+}
+
+.box .input-box select {
+    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23fff'%3e%3cpath d='M7 10l5 5 5-5z'/%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-position: right 0.5rem center;
+    background-size: 16px 12px;
+    padding-right: 24px;
 }
 
 .link-box {
@@ -150,6 +200,7 @@ h3 {
 .button-form {
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
     margin-top: 20px;
 }
 .button-form-box {
